--- a/src/main/resources/templates/task4/task4.html
+++ b/src/main/resources/templates/task4/task4.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Task4</title>
+    <link rel="stylesheet" th:href="@{/css/task3/task3.css}">
 </head>
 <body>
+<div class="container">
 
+</div>
 </body>
 </html>
