--- a/src/main/resources/templates/task1/task1.html
+++ b/src/main/resources/templates/task1/task1.html
@@ -18,13 +18,20 @@
                 </div>
                 <p >
                 <p style="font-size: 30px;  margin: 0 0 0 10px;">Розшифрувати повідомлення  <text >С = </text>
+                    <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
+                <p >
+                <p style="font-size: 30px;  margin: 0 0 0 10px;">Зашифрувати повідомлення  <text >M = </text>
                         <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
                         <p >
                 <p style="font-size: 30px;  margin: 0 0 0 10px;">Підписати повідомлення  <text >М = </text>
                         <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
-                        <button type="submit" style="width: 250px; margin: 15px 0 0 10px; font-size: 30px;">Розрахувати</button></p> 
-                        <textarea style="width: 90%; height: 55%; margin: 5%; border: 2px solid black;"></textarea>                   
+                </p>
+                <p style="font-size: 30px;  margin: 0 0 0 10px;">Перевірити підпис<text >S = </text>
+                    <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
+                </p>
+                <button type="submit" style="width: 250px; margin: 15px 0 0 10px; font-size: 30px;">Розрахувати</button>
             </form>
+            <textarea style="width: 90%; height: 55%; margin: 5%; border: 2px solid black;"></textarea>
             </div>
     </main>
 </div>  
