--- a/src/main/resources/templates/task4/task4.html
+++ b/src/main/resources/templates/task4/task4.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Task4</title>
-    <link rel="stylesheet" th:href="@{/css/task3/task3.css}">
+    <link rel="stylesheet" th:href="@{/css/task4/task4.css}">
 </head>
 <body>
 <div class="container">
-
+    <span class="member">1 учасник: </span>
+    <div>
+        <input type="text" placeholder="Координата Х" >
+        <input type="text" placeholder="Координата Y" >
+    </div>
+    <span class="member">2 учасник: </span>
+    <div>
+        <input type="text" placeholder="Координата Х" >
+        <input type="text" placeholder="Координата Y" >
+    </div>
+    <span class="member">3 учасник: </span>
+    <div>
+        <input type="text" placeholder="Координата Х" >
+        <input type="text" placeholder="Координата Y" >
+    </div>
+    <button class="btn" type="submit">Розрахувати</button>
+    <textarea class="result" rows="30">Результат</textarea>
 </div>
 </body>
 </html>
