--- a/src/main/resources/templates/task1/task1.html
+++ b/src/main/resources/templates/task1/task1.html
@@ -1,37 +1,40 @@
 <div th:fragment="settingsFragment">
     <main id="main">
         <div class="container-fluid mt-4 ms-2">
-            <form>
+            <form th:object="${dataRequest}" th:action="@{/task1Calculate}" th:method="post">
                 <div style="display: inline-flex;  flex-wrap: wrap; gap: 20px; width: 100%;">
-                    <div style="width: 33%; margin: 0 0 0 10px;">
-                        <text class="h3" style="font-size: 30px;">RSA p = </text>
-                        <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
+                    <div style="width: 20%; margin: 0 0 0 5px;">
+                        <text class="h3" style="font-size: 30px;">p = </text>
+                        <input  type="text" th:field="*{P}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
                     </div>
-                    <div style="width: 30%; margin: 0 0 0 10px;">
+                    <div style="width: 20%; margin: 0 0 0 5px;">
                         <text class="h3" style="font-size: 30px;">q = </text>
-                        <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
+                        <input  type="text" th:field="*{Q}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
                     </div>
-                    <div style="width: 30%; font-size: 30px;  margin: 0 0 0 10px;">
-                        <text >e = </text>
-                        <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
+                    <div style="width: 20%; margin: 0 0 0 5px;">
+                        <text style="font-size: 30px;">e = </text>
+                        <input  type="text" th:field="*{E}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
+                    </div>
+                    <div style="width: 20%; margin: 0 0 0 5px;">
+                        <text style="font-size: 30px;">d = </text>
+                        <input  type="text" th:field="*{D}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
                     </div>
                 </div>
-                <p >
-                <p style="font-size: 30px;  margin: 0 0 0 10px;">Розшифрувати повідомлення  <text >С = </text>
-                    <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
-                <p >
-                <p style="font-size: 30px;  margin: 0 0 0 10px;">Зашифрувати повідомлення  <text >M = </text>
-                        <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
-                        <p >
-                <p style="font-size: 30px;  margin: 0 0 0 10px;">Підписати повідомлення  <text >М = </text>
-                        <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
-                </p>
-                <p style="font-size: 30px;  margin: 0 0 0 10px;">Перевірити підпис<text >S = </text>
-                    <input  type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;">
-                </p>
+                <p style="font-size: 30px;  margin: 0 0 0 10px;">Зашифрувати повідомлення: <text >M = </text>
+                    <input  type="text" th:field="*{M1}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
+
+                <p style="font-size: 30px;  margin: 0 0 0 10px;">Розшифрувати повідомлення: <text >С = </text>
+                    <input  type="text" th:field="*{C}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
+
+                <p style="font-size: 30px;  margin: 0 0 0 10px;">Підписати повідомлення: <text >М = </text>
+                        <input  type="text" th:field="*{M2}" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
+
+                <p style="font-size: 30px;  margin: 0 0 0 10px;">Перевірити підпис: <text >S = </text>
+                    <input th:field="*{S}" type="text" style="width: 150px;  margin: 10px 0 0 0; font-size: 30px; border: 2px solid black;"></p>
+
                 <button type="submit" style="width: 250px; margin: 15px 0 0 10px; font-size: 30px;">Розрахувати</button>
             </form>
-            <textarea style="width: 90%; height: 55%; margin: 5%; border: 2px solid black;"></textarea>
+            <textarea th:text="${result}" style="width: 50%; height: 40%; margin: 1%; border: 2px solid black;"></textarea>
             </div>
     </main>
 </div>  
