--- a/src/main/resources/templates/task4/task4.html
+++ b/src/main/resources/templates/task4/task4.html
@@ -10,17 +10,29 @@
     <div class="container">
         <span class="member">1 учасник: </span>
         <div>
-            <input type="text" placeholder="Координата Х" th:field="*{x1}">
+            <div>
+                <span class="member">X1: </span>
+                <input type="text" placeholder="Координата Х" th:field="*{x1}">
+            </div>
+            <span class="member">Y1: </span>
             <input type="text" placeholder="Координата Y" th:field="*{y1}">
         </div>
         <span class="member">2 учасник: </span>
         <div>
-            <input type="text" placeholder="Координата Х" th:field="*{x2}">
+            <div>
+                <span class="member">X2: </span>
+                <input type="text" placeholder="Координата Х" th:field="*{x2}">
+            </div>
+            <span class="member">Y2: </span>
             <input type="text" placeholder="Координата Y" th:field="*{y2}">
         </div>
         <span class="member">3 учасник: </span>
         <div>
-            <input type="text" placeholder="Координата Х" th:field="*{x3}">
+            <div>
+                <span class="member">X3: </span>
+                <input type="text" placeholder="Координата Х" th:field="*{x3}">
+            </div>
+            <span class="member">Y3: </span>
             <input type="text" placeholder="Координата Y" th:field="*{y3}">
         </div>
         <button class="btn" type="submit">Розрахувати</button>
