--- a/src/main/resources/templates/task4/task4.html
+++ b/src/main/resources/templates/task4/task4.html
@@ -36,8 +36,8 @@
             <input type="text" placeholder="Координата Y" th:field="*{y3}">
         </div>
         <button class="btn" type="submit">Розрахувати</button>
+        <img class="image" th:src="@{/image/task4/task4.jpg}">
         <textarea class="result" rows="30" th:text="${result}">Результат</textarea>
-        <img th:src="@{/image/task4/task4.jpg}">
     </div>
 </form>
 </body>
